# Customer-Churn-Prediction

./: .dockerignore  .env  .gitignore  DOCKER_README.md  Dockerfile  LICENSE  README.md  __init__.py  airflow.cfg  airflow.db  airflow_dags.dvc  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  dvc.yaml  logs.dvc  pyproject.toml  requirements.txt  runner.bash  runner.sh  stash.txt
.dvc/: config
airflow_dags/: __init__.py  churn_pipeline_dag.py
api/: __init__.py  main.py  t.py
artifacts/evaluation/: .gitignore
config/: airflow.cfg
dags/: airflow_pipeline.py  test.py
data/processed/: preprocessor.joblib  test.csv  train.csv
models/: Logistic_Regression.skops  XGBoost.skops  logistic_regression.joblib  logistic_regression.skops  xgboost.joblib  xgboost.skops
models/preprocessing/: preprocessor.joblib
src/: __init__.py  artifacts.py  config.py  data_ingestion.py  evaluate.py  ml_flow.py  preprocessing.py  train.py
src/utils/: logger.py
